--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,6 @@
 blockquote
 {
     color: #4a4a4a;
-    border-left: 1em solid #edf6fc;
+    border-left: 1em solid #cccccc;
     padding-left: 1em;
 }
