--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8"></meta>
 <title>{{ page.title }}</title>
 <link href="http://software.clapper.org/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css"/>
+<link href="http://software.clapper.org/stylesheets/pygments.css" media="screen" rel="stylesheet" type="text/css"/>
 <link href="stylesheets/style.css" media="screen" rel="stylesheet" type="text/css"/>
 </head>
 
